[master] Adding icons and performing alignment fixes

--- a/src/main/resources/static/css/login_styles.css
+++ b/src/main/resources/static/css/login_styles.css
@@ -26,14 +26,12 @@
     margin-bottom: 6px;
 }
 
-.login_error{
-    background-color: #9e1b2d;
-}
-
 .login_error p{
-    color:#550f18;
-    font-size:16px;
+    font-size:14px;
 }
 
+.login_icon{
+    margin: 0 5px 0 5px;
+}
 
 /**************************************/
